# aviutl_scripts

dll/: CMakeLists.txt  SetCompiler.cmake
dll/ErrorDiffusionDither/: CMakeLists.txt
dll/ErrorDiffusionDither/include/: closest_color_finder.h  error_diffusion_dither.h
dll/ErrorDiffusionDither/lua_adapter/: lua_adapter.cc
dll/ErrorDiffusionDither/src/: error_diffusion_dither.cc
dll/ErrorDiffusionDither/test/: CMakeLists.txt  closest_color_finder_test.cc
dll/MosaicFade/: CMakeLists.txt
dll/MosaicFade/include/: mosaic_fade.h  mosaic_parameter.h
dll/MosaicFade/lua_adapter/: lua_adapter.cc
dll/MosaicFade/src/: mosaic_fade.cc
dll/MosaicFade/test/: CMakeLists.txt  mosaic_fade_test.cc
dll/shared/: CMakeLists.txt
dll/shared/include/: aviutl.h
dll/shared/include/aviutl/: image.h  irectangle.h  map.h  pixel.h  point.h  point_range.h
dll/shared/src/: image.cc  map.cc  pixel.cc  point.cc
dll/shared/test/: CMakeLists.txt  image_test.cc  map_test.cc  pixel_test.cc  point_range_test.cc  point_test.cc
lua/: ErrorDiffusionDither.anm  MosaicDither.anm
